# dynamic_gesture

./: README.md
cmake/: common.cmake
load_engine/: CMakeLists.txt  Gesture.hpp  InferenceResult.h  Net.hpp  README.md  Skeleton.hpp  YOLO.hpp  hungarianTrack.cpp  hungarianTrack.h  main.cpp
load_engine/model/: cls_cutid.onnx  cls_cutid.trt  hand_detection_rm_scatter.onnx  landmark_size-64.onnx  landmark_size-64.trt
load_onnx/: CMakeLists.txt
load_openvino/: CMakeLists.txt  README.md  main.cpp  main.py
load_openvino/lib/intel64/: libopenvino_c.so.2023.0.1  libopenvino_ir_frontend.so.2023.0.1  libopenvino_onnx_frontend.so.2023.0.1  libopenvino_paddle_frontend.so.2023.0.1  libopenvino_pytorch_frontend.so.2023.0.1  libopenvino_tensorflow_frontend.so.2023.0.1  libopenvino_tensorflow_lite_frontend.so.2023.0.1
load_openvino/model/public/mobilenet-ssd/FP16/: mobilenet-ssd.xml
load_openvino/model/public/mobilenet-ssd/FP32/: mobilenet-ssd.xml
load_tflite/: CMakeLists.txt  README.md  main.cpp
load_tflite/include/flatbuffers/: allocator.h  array.h  base.h  buffer.h  buffer_ref.h  code_generator.h  code_generators.h  default_allocator.h  detached_buffer.h  file_manager.h  flatbuffer_builder.h  flatbuffers.h  flex_flat_util.h  flexbuffers.h  grpc.h  hash.h  idl.h  minireflect.h  reflection.h  reflection_generated.h  registry.h  stl_emulation.h  string.h  struct.h  table.h  util.h  vector.h  vector_downward.h  verifier.h
util/: process.cpp  process.h
